repair router file for 404 errors and remove lass "class" misnamed classNames

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
 
-    <title>Stuff React</title>
+    <title>Stuff Login</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
